.maintenance/k8s/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance
spec:
  type: ClusterIP
  selector:
    app: maintenance
  ports:
    - port: 80
      targetPort: 80
