.maintenance/k8s/base/ingress-maintenance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintenance-ingress
  annotations:
    traefik.frontend.priority: "4"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance
                port:
                  number: 80
